--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -5,85 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZooMagazin</title>
     <link rel="stylesheet" href="../css/page2.css" />
-    <link rel="stylesheet" href="../css/zooizbrannoe.css" />
+    <link rel="stylesheet" href="../css/zooakaunt.css" />
     <link rel="stylesheet" href="../css/zoopages.css" />
+    <link rel="stylesheet" href="../css/zookorzina.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap"
       rel="stylesheet"
     />
+    
     <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
+  <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=mXASaQqaoMiA9Pzaun8I8RCY9NqRrqNGfzTArTQrsOHM13fBUpm7qGR5djC1iWIIY5Y56F1LThvu4rY0IJJ2Jj3C1lsQjPslY2zHKLlk3MBqF6lJ7dW5rw_dFUwnPWj5" charset="UTF-8"></script></head>
+  <body>
   </head>
   <body>
-    <header>
-      <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
-      <nav>
-        <a href="zoomagazin.html"
-          ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
-        ></a>
-        <a href="zooizbrannoe.html"
-          ><div class="cerb">
-            Избранное
-            <img
-              src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-            /></div
-        ></a>
-        <a href="zookorzina.html"
-          ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
-        ></a>
-        <a href="#" id="openRegistration"
-          >
-          <a href="#" id="openLogin">
-          <div class="cerb">
-            Войти
-            <img
-              src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
-            /></div
-        ></a>
-      </nav>
-    </header>
-    <div class="men">
-      <div class="burger-menu">
-        <div class="menu-icon" id="burger-icon">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
-      </div>
-      <nav class="nav-menu" id="nav-menu">
-        <ul>
+    <article>
+      <header>
+        <img src="../img/Mask group.png" alt="Логотип PetJet" class="logo" />
+        <nav>
           <a href="zoomagazin.html"
-            ><div class="negr">Каталог <img src="../img/Vector.svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
-          >
-          </a>
-          <img src="../img/Line 5.svg" class="line" />
+            ><div class="cerb">Каталог <img src="../img/Vector.svg" /></div
+          ></a>
           <a href="zooizbrannoe.html"
-            ><div class="negr">
+            ><div class="cerb">
               Избранное
               <img
-                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
-              /> <img src="../img/-_.svg" class="strela" /></div
+                src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
           ></a>
-          <img src="../img/Line 5.svg" class="line" />
           <a href="zookorzina.html"
-            ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+            ><div class="cerb">Корзина <img src="../img/Vector (1).svg" /></div
           ></a>
-          <img src="../img/Line 5.svg" class="line" />
-          <a href="#"
-            ><div class="negr">
+          <a href="#" id="openRegistration"
+            >
+            <a href="#" id="openLogin">
+            <div class="cerb">
               Войти
               <img
-                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
-              /> <img src="../img/-_.svg" class="strela" /></div
+                src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg"
+              /></div
           ></a>
-          <img src="../img/Line 5.svg" class="line" />
-        </ul>
-      </nav>
-      <div style="height: 40px"></div>
-    </div>
-
-     <div class="mod" id="registrationModal">
+        </nav>
+      </header>
+      <div class="men">
+        <div class="burger-menu">
+          <div class="menu-icon" id="burger-icon">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+          </div>
+        </div>
+        <nav class="nav-menu" id="nav-menu">
+          <ul>
+            <a href="zoomagazin.html"
+              ><div class="negr">Каталог <img src="../img/Vector.svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+            >
+            </a>
+            <img src="../img/Line 5.svg" class="line" />
+            <a href="zooizbrannoe.html"
+              ><div class="negr">
+                Избранное
+                <img
+                  src="../img/favorite_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+                /> <img src="../img/-_.svg" class="strela" /></div
+            ></a>
+            <img src="../img/Line 5.svg" class="line" />
+            <a href="zookorzina.html"
+              ><div class="negr">Корзина <img src="../img/Vector (1).svg" class="negrit"/> <img src="../img/-_.svg" class="strela" /></div
+            ></a>
+            <img src="../img/Line 5.svg" class="line" />
+            <a href="mobilemodal.html"
+              ><div class="negr">
+                Войти
+                <img
+                  src="../img/account_circle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24 1.svg" class="negrit"
+                /> <img src="../img/-_.svg" class="strela" /></div
+            ></a>
+            <img src="../img/Line 5.svg" class="line" />
+          </ul>
+        </nav>
+        <div style="height: 40px"></div>
+      </div>
+    <div class="mod" id="registrationModal">
       <div class="mod-content">
         <h2>Регистрация</h2>
         <form id="registrationForm">
