--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/page2.css" />
     <link rel="stylesheet" href="../css/zooakaunt.css" />
     <link rel="stylesheet" href="../css/zoopages.css" />
-    <link rel="stylesheet" href="../css/zookorzina.css" />
+    <link rel="stylesheet" href="../css/zooizbrannoe.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
