--- a/project pages/zookorzina.html
+++ b/project pages/zookorzina.html
@@ -265,7 +265,7 @@
         <p>О нас</p>
         <ul>
           <li><a href="#">Адреса</a></li>
-          <li><a href="#">О компании</a></li>
+          <li><a href="zookompania.html">О компании</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </div>
