--- a/project pages/zookompania.html
+++ b/project pages/zookompania.html
@@ -17,42 +17,6 @@
     
     <link rel="icon" href="../img/Mask group.png" type="image/x-icon" />
   <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=mXASaQqaoMiA9Pzaun8I8RCY9NqRrqNGfzTArTQrsOHM13fBUpm7qGR5djC1iWIIY5Y56F1LThvu4rY0IJJ2Jj3C1lsQjPslY2zHKLlk3MBqF6lJ7dW5rw_dFUwnPWj5" charset="UTF-8"></script></head>
-  <style>
-    .about-content {
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-}
-
-.about-content h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.about-content h2 {
-  margin-top: 20px;
-}
-
-.about-content p {
-  font-size: 1.1em;
-  line-height: 1.6;
-  color: #333;
-}
-
-.about-content ul {
-  padding: 10px;
-}
-
-.about-content ul li {
-  background: url('bullet.png') no-repeat left center;
-  padding-left: 20px;
-  margin-bottom: 10px;
-  font-size: 1.1em;
-  line-height: 1.6;
-  color: #333;
-}
-  </style>
 </head>
   <body>
     <article>
@@ -270,7 +234,19 @@
           </ul>
           <h2>Наша цель:</h2>
           <p>Предоставить качественные товары для животных по доступным ценам, обеспечивая удобство и безопасность покупок, а также способствовать ответственному отношению к животным.</p>
-          <div 
+          <div class="stolbi">
+            <div style="width: 80%;">
+                <h2>Наша команда: </h2>
+                <p>Мы – команда профессионалов, которые любят животных и стремятся сделать жизнь ваших питомцев счастливой и комфортной.  Мы постоянно совершенствуем наш сервис и расширяем ассортимент, чтобы удовлетворить все ваши потребности.</p>
+                <br>
+                <h2>Свяжитель с нами:</h2>
+                <p>Если у вас есть вопросы, предложения или замечания, пожалуйста, свяжитесь с нами через форму обратной связи на сайте или по телефону.  Мы всегда рады помочь!</p>
+            </div>
+            <div>
+                <img src="../img/IMG_3566 2.jpg" style="width: 100%;">
+            </div>
+          </div>
+          <p>Присоединяйтесь к сообществу PetJet и сделайте жизнь вашего питомца еще лучше!</p>
         </div>
     </main>
     <footer class="footer">
