--- a/project pages/zooizbrannoe.html
+++ b/project pages/zooizbrannoe.html
@@ -261,7 +261,7 @@
         <ul>
           <li><a href="#">Адреса</a></li>
           <li><a href="zookompania.html">О компании</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="zookontact.html">Контакты</a></li>
         </ul>
       </div>
     </footer>
