--- a/project pages/zookorzina.html
+++ b/project pages/zookorzina.html
@@ -266,7 +266,7 @@
         <ul>
           <li><a href="#">Адреса</a></li>
           <li><a href="zookompania.html">О компании</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="zookontact.html">Контакты</a></li>
         </ul>
       </div>
     </footer>
