--- a/project pages/zookontact.html
+++ b/project pages/zookontact.html
@@ -234,12 +234,7 @@
               </div>
               <p><b>Адрес магазина:</b> г.Москва Кронштадский бул. 37Б </p>
             </div>
-            <script
-              type="text/javascript"
-              charset="utf-8"
-              async
-              src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A9dec774f4873023b81502f5246cb1a43274aa3e507f39fd5319c89d151b3b696&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"
-            ></script>
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A9dec774f4873023b81502f5246cb1a43274aa3e507f39fd5319c89d151b3b696&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
           </div>
     </main>
     </main>
@@ -265,7 +260,7 @@
         <p>О нас</p>
         <ul>
           <li><a href="#">Адреса</a></li>
-          <li><a href="#">О компании</a></li>
+          <li><a href="zookompania.html">О компании</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </div>
