--- a/project pages/zookontact.html
+++ b/project pages/zookontact.html
@@ -252,7 +252,7 @@
       <div class="footer-section">
         <p>Пользователям</p>
         <ul>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="zoomagazin.html">Каталог</a></li>
           <li><a href="#">Доставка и оплата</a></li>
         </ul>
       </div>
