--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div>
               <div class="button-title">Проект 2</div>
               <div class="button-description">
-                Создание каталога через массив
+                Создание интернет зоомагазина
               </div>
             </div>
             <span class="button-date">17.02.2025</span>
