--- a/index.html
+++ b/index.html
@@ -205,9 +205,11 @@
             </div>
             <div>
               <div class="button-title">Проект 3</div>
-              <div class="button-description">Описание</div>
+              <div class="button-description">
+                Создание интернет-магазина спортивного питания
+              </div>
             </div>
-            <span class="button-date">дата</span>
+            <span class="button-date">17.03.2025</span>
           </button>
         </li>
         <li>
@@ -249,11 +251,14 @@
       <div class="modal-content">
         <span class="close">&times;</span>
         <div class="modal-header">
-          <h5 class="modal-title">Уведомление</h5>
+          <h5 class="modal-title">
+            Проект 3. Интернет-магазин спортивного питания
+          </h5>
         </div>
-        <iframe class="modal-iframe" src="page3.html"></iframe>
+        <iframe class="modal-iframe" src="project pages/page3.html"></iframe>
       </div>
     </div>
+
     <div id="modal4" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
