--- a/project pages/page3.html
+++ b/project pages/page3.html
@@ -22,9 +22,9 @@
     </style>
   </head>
   <body>
-    <a href="sportmagazin.php"
-      ><img src="../img/sportlogo.svg" />Открыть интернет-магазин спортивного
-      питания</a
+    <a href="sportmagazin.html"
+      ><img src="../img/sportlogo.svg" /><br />Открыть интернет-магазин
+      спортивного питания</a
     >
   </body>
 </html>
