--- a/project pages/zookontact.html
+++ b/project pages/zookontact.html
@@ -228,8 +228,8 @@
               <p><b>Email:</b> petjet@gmail.com</p>
               <p><b>Мы в соц-сетях:</b></p> 
               <div  class=".social-icons">
-                <a href=""> </a>
-                <a href=""></a>
+                <a href=""><img src="../img/vklogo.svg"></a>
+                <a href=""><img src="../img/tglogo.svg"></a>
               </div>
               <p><b>Адрес магазина:</b> г.Москва Кронштадский бул. 37Б </p>
             </div>
