--- a/project pages/page3.html
+++ b/project pages/page3.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-    <a href="sportmagazin.html" target="_blank"
+    <a href="http://w90677gj.beget.tech/" target="_blank"
       ><img src="../img/sportlogo.svg" /><br />Открыть интернет-магазин
       спортивного питания</a
     >
